# fedqrs

./: .gitignore  Cargo.toml  PLAN.md  README.md
core/: Cargo.toml
core/src/: expr.rs  ir.rs  lib.rs  partition.rs  sql.rs  types.rs
src/: bench_adbc_datafusion.rs  bench_adbc_duckdb.rs  bench_datafusion.rs  bench_duckdb.rs  bench_ext.rs  bench_federated.rs  connectors.rs  engine.rs  expr.rs  ffi.rs  ir.rs  lib.rs  main.rs  sql.rs
