[package]
name = "fedqrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "fedqrs"
# cdylib: the Python extension module loaded by federated_query.
# rlib: so the (gated) benchmark binary and unit tests can link the same code.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fedqrs-bench"
path = "src/main.rs"
# The Postgres->Arrow benchmarks are a dev tool, not part of the engine. They
# pull in duckdb/connectorx/adbc (slow to build), so they only build under
# `--features bench` and never during a normal `maturin develop`.
required-features = ["bench"]

[features]
default = []
bench = [
    "dep:postgres",
    "dep:uuid",
    "dep:chrono",
    "dep:connectorx",
    "dep:duckdb",
]

[dependencies]
# The execution engine proper. Sources are read through a Python callback
# (pyo3), so the library needs no native database drivers.
pyo3 = { version = "0.26", features = ["extension-module"] }
datafusion = "54"
# `ffi` gives us ffi_stream (the Arrow C stream interface) for zero-copy
# handoff of Arrow data across the Python/Rust boundary via PyCapsules.
arrow = { version = "58", features = ["ffi"] }
# arrow-array/arrow-schema are the same 58.x as `arrow`'s sub-crates; kept as
# direct deps because the benchmark modules import them by name.
arrow-array = "58"
arrow-schema = "58"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native source drivers used by the engine. ADBC reads Postgres straight into
# Arrow (the same C driver the Python path uses) and builds fast.
adbc_core = "0.23"
adbc_driver_manager = "0.23"

# Benchmark-only dependencies (see the `bench` feature).
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"], optional = true }
uuid = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
connectorx = { version = "0.4", default-features = false, features = ["src_postgres", "dst_arrow", "fptr"], optional = true }
duckdb = { version = "1.3", features = ["bundled", "appender-arrow"], optional = true }

[patch.crates-io]
# Vendored fork: the only change is ArrowVTab streaming batches > 2048 rows
# across func() calls instead of asserting the whole batch fits one vector.
# Only used by the `bench` feature's duckdb dependency.
duckdb = { path = "vendor/duckdb" }

[profile.release]
opt-level = 3
