[package]
name = "fedqrs-core"
version = "0.1.0"
edition = "2021"

# The pyo3-free core of the engine: the IR, expression translation, source-SQL
# emission, and scan-partitioning / selectivity logic. No Python, so it builds
# and unit-tests with a plain `cargo test` (the pyo3 extension crate cannot,
# since this environment has no shared libpython to link a test binary against).

[dependencies]
datafusion = "54"
arrow = "58"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
